--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "validations",
-  "version": "1.0.0",
-  "description": "",
+  "name": "todolistjk-sql",
+  "version": "1.0.1",
+  "description": "Todo App SQL",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "watch": "nodemon server.js"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Justin Kook",
+  "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "mysql": "^2.12.0",
     "mysql2": "^1.3.6",
+    "path": "^0.12.7",
     "sequelize": "^4.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.6"
   }
 }
